* Added polish localization, thanks Taco!
* Added russian localization, thanks GodHybrid!