@@ -40,8 +40,6 @@ Mods: {
 					Tooltip: In secondi
 				}
 			}
-
-			Common.AcceptClientChanges: Solo il proprietario del mondo può cambiare la configurazione! Fallo in giocatore singolo.
 		}
 
 		PingStatus: {
