@@ -40,8 +40,6 @@ Mods: {
 					Tooltip: Wyrażone w sekundach
 				}
 			}
-
-			Common.AcceptClientChanges: Tylko gospodarz tego świata może zmieniać ustawienia konfiguracji! Zrób to w trybie jednoosobowym.
 		}
 
 		PingStatus: {
