@@ -40,8 +40,6 @@ Mods: {
 					// Tooltip: In seconds
 				}
 			}
-
-			// Common.AcceptClientChanges: Only the host of this world can change the config! Do so in singleplayer.
 		}
 
 		PingStatus: {
