@@ -40,8 +40,6 @@ Mods: {
 					Tooltip: В секундах
 				}
 			}
-
-			Common.AcceptClientChanges: Только владелец этого мира может менять настройки! Смените настройки в одиночной игре.
 		}
 
 		PingStatus: {
