@@ -1,2 +1,3 @@
-* Added polish localization, thanks Taco!
-* Added russian localization, thanks GodHybrid!
+v{ModVersion} has been published to {tMLBuildPurpose} tML v{tMLVersion}. Learn more @ {ModHomepage}
+
+* Added italian localization, thanks Sea Noodle!
